Add datascience units

--- a/cursos/espanol/datascience/2_vectores.ipynb
+++ b/cursos/espanol/datascience/2_vectores.ipynb
@@ -13,12 +13,12 @@
    "id": "d3dba1d5-a150-45a4-a848-bd678b96840e",
    "metadata": {},
    "source": [
-    "Como mencionamos, una vez que tenemos nuestra tabla completa el proximo paso es convertir todos nuestros datos a numeros. Esto sirve porque las cajas negras que utilizaremos para hacer predicciones son algoritmos matematicos que funcionan con numeros. Si convierto toda mi tabla en numeros podemos decir que cada fila es un vector que es una palabra que viene de la matematica y que escucharemos mucho. Veamos:"
+    "Como mencionamos, una vez que tenemos nuestra tabla completa el proximo paso es convertir todos nuestros datos a numeros. Esto sirve porque las cajas negras que utilizaremos para hacer predicciones son algoritmos matematicos que funcionan con numeros. Si convierto toda mi tabla en numeros podemos decir que **cada fila es un vector** que es una palabra que viene de la matematica y que escucharemos mucho. Veamos:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "857ec25d-f707-42cd-a3dc-50b9d2f11eed",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "1531701e-ff2b-44a2-8004-9ec62c2ea744",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "b438b0f7-1bd7-471a-ad1a-dff5df2e5171",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
        "      <td>Gris</td>\n",
        "      <td>False</td>\n",
        "      <td>Bueno</td>\n",
-       "      <td>294.84</td>\n",
+       "      <td>376.84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -118,7 +118,7 @@
        "      <td>Verde</td>\n",
        "      <td>True</td>\n",
        "      <td>Bueno</td>\n",
-       "      <td>234.92</td>\n",
+       "      <td>397.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -143,16 +143,16 @@
       "text/plain": [
        "   Memoria  Color  Desbloqueado           Estado  Precio\n",
        "0      256   Gris         False  Reacondicionado  461.99\n",
-       "1      256   Gris         False            Bueno  294.84\n",
+       "1      256   Gris         False            Bueno  376.84\n",
        "2       64   Gris          True  Reacondicionado  419.99\n",
        "3      512    Oro         False  Reacondicionado  535.00\n",
        "4      256   Gris         False            Bueno  499.00\n",
-       "5      256  Verde          True            Bueno  234.92\n",
+       "5      256  Verde          True            Bueno  397.92\n",
        "6      256   Gris          True        Muy bueno  469.82\n",
        "7      256   Gris          True            Bueno  422.60"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "48e30016-9de1-46e7-abe3-07277799a851",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "      <td>256</td>\n",
        "      <td>False</td>\n",
        "      <td>Bueno</td>\n",
-       "      <td>294.84</td>\n",
+       "      <td>376.84</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -269,7 +269,7 @@
        "      <td>256</td>\n",
        "      <td>True</td>\n",
        "      <td>Bueno</td>\n",
-       "      <td>234.92</td>\n",
+       "      <td>397.92</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -301,11 +301,11 @@
       "text/plain": [
        "   Memoria  Desbloqueado           Estado  Precio  Color_Gris  Color_Oro  \\\n",
        "0      256         False  Reacondicionado  461.99           1          0   \n",
-       "1      256         False            Bueno  294.84           1          0   \n",
+       "1      256         False            Bueno  376.84           1          0   \n",
        "2       64          True  Reacondicionado  419.99           1          0   \n",
        "3      512         False  Reacondicionado  535.00           0          1   \n",
        "4      256         False            Bueno  499.00           1          0   \n",
-       "5      256          True            Bueno  234.92           0          0   \n",
+       "5      256          True            Bueno  397.92           0          0   \n",
        "6      256          True        Muy bueno  469.82           1          0   \n",
        "7      256          True            Bueno  422.60           1          0   \n",
        "\n",
@@ -320,7 +320,7 @@
        "7            0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "638137e3-36d4-4b97-bd4c-aba69e291e37",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "d91e55c7-2716-4630-932b-07162ce15d91",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>294.84</td>\n",
+       "      <td>376.84</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -470,7 +470,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>234.92</td>\n",
+       "      <td>397.92</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -520,11 +520,11 @@
       "text/plain": [
        "   Precio  Memoria_64  Memoria_256  Memoria_512  Color_Gris  Color_Oro  \\\n",
        "0  461.99           0            1            0           1          0   \n",
-       "1  294.84           0            1            0           1          0   \n",
+       "1  376.84           0            1            0           1          0   \n",
        "2  419.99           1            0            0           1          0   \n",
        "3  535.00           0            0            1           0          1   \n",
        "4  499.00           0            1            0           1          0   \n",
-       "5  234.92           0            1            0           0          0   \n",
+       "5  397.92           0            1            0           0          0   \n",
        "6  469.82           0            1            0           1          0   \n",
        "7  422.60           0            1            0           1          0   \n",
        "\n",
@@ -549,7 +549,7 @@
        "7                 0                       0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "dbd6eaff-0ffc-4af9-ab7b-83c804ab92e5",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "24e12721-f644-46c1-ab62-186a7a038971",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "         0.  ,   0.  ,   0.  ,   1.  ])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "7053199e-040c-4905-9566-03fbfb91e474",
    "metadata": {},
    "outputs": [],
