--- a/cursos/espanol/datascience/3_train_test.ipynb
+++ b/cursos/espanol/datascience/3_train_test.ipynb
@@ -88,7 +88,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>294.84</td>\n",
+       "      <td>376.84</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -148,7 +148,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>234.92</td>\n",
+       "      <td>397.92</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -198,11 +198,11 @@
       "text/plain": [
        "   Precio  Memoria_64  Memoria_256  Memoria_512  Color_Gris  Color_Oro  \\\n",
        "0  461.99           0            1            0           1          0   \n",
-       "1  294.84           0            1            0           1          0   \n",
+       "1  376.84           0            1            0           1          0   \n",
        "2  419.99           1            0            0           1          0   \n",
        "3  535.00           0            0            1           0          1   \n",
        "4  499.00           0            1            0           1          0   \n",
-       "5  234.92           0            1            0           0          0   \n",
+       "5  397.92           0            1            0           0          0   \n",
        "6  469.82           0            1            0           1          0   \n",
        "7  422.60           0            1            0           1          0   \n",
        "\n",
@@ -257,19 +257,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19730270-cada-4f1d-beec-61bacc6dab98",
+   "metadata": {},
+   "source": [
+    "Mediante el parametro **test_size** le diremos que porcentaje de los datos iran a nuestra tabla de Prueba, en este caso 0.30 indica el 30%. El parametro **random_state** es una semilla para poder reproducir la seleccion aleatoria."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "c6b5422e-15e7-481d-9554-625aa24ae9ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train, df_test = train_test_split(df, test_size=0.33, random_state=42)"
+    "df_train, df_test = train_test_split(df, test_size=0.30, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "8d21d5e7-a729-4dcd-9514-e8debfe0244f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Precio</th>\n",
+       "      <th>Memoria_64</th>\n",
+       "      <th>Memoria_256</th>\n",
+       "      <th>Memoria_512</th>\n",
+       "      <th>Color_Gris</th>\n",
+       "      <th>Color_Oro</th>\n",
+       "      <th>Color_Verde</th>\n",
+       "      <th>Desbloqueado_False</th>\n",
+       "      <th>Desbloqueado_True</th>\n",
+       "      <th>Estado_Bueno</th>\n",
+       "      <th>Estado_Muy bueno</th>\n",
+       "      <th>Estado_Reacondicionado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>469.82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>461.99</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>499.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>535.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>397.92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Precio  Memoria_64  Memoria_256  Memoria_512  Color_Gris  Color_Oro  \\\n",
+       "6  469.82           0            1            0           1          0   \n",
+       "0  461.99           0            1            0           1          0   \n",
+       "4  499.00           0            1            0           1          0   \n",
+       "3  535.00           0            0            1           0          1   \n",
+       "5  397.92           0            1            0           0          0   \n",
+       "\n",
+       "   Color_Verde  Desbloqueado_False  Desbloqueado_True  Estado_Bueno  \\\n",
+       "6            0                   0                  1             0   \n",
+       "0            0                   1                  0             0   \n",
+       "4            0                   1                  0             1   \n",
+       "3            0                   1                  0             0   \n",
+       "5            1                   0                  1             1   \n",
+       "\n",
+       "   Estado_Muy bueno  Estado_Reacondicionado  \n",
+       "6                 1                       0  \n",
+       "0                 0                       1  \n",
+       "4                 0                       0  \n",
+       "3                 0                       1  \n",
+       "5                 0                       0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e0ebba4f-6771-4739-a8a6-898e4f6dffa9",
    "metadata": {},
    "outputs": [
     {
@@ -339,8 +500,8 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>499.00</td>\n",
+       "      <th>1</th>\n",
+       "      <td>376.84</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -351,36 +512,6 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>535.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>469.82</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -391,38 +522,65 @@
        "   Precio  Memoria_64  Memoria_256  Memoria_512  Color_Gris  Color_Oro  \\\n",
        "7  422.60           0            1            0           1          0   \n",
        "2  419.99           1            0            0           1          0   \n",
-       "4  499.00           0            1            0           1          0   \n",
-       "3  535.00           0            0            1           0          1   \n",
-       "6  469.82           0            1            0           1          0   \n",
+       "1  376.84           0            1            0           1          0   \n",
        "\n",
        "   Color_Verde  Desbloqueado_False  Desbloqueado_True  Estado_Bueno  \\\n",
        "7            0                   0                  1             1   \n",
        "2            0                   0                  1             0   \n",
-       "4            0                   1                  0             1   \n",
-       "3            0                   1                  0             0   \n",
-       "6            0                   0                  1             0   \n",
+       "1            0                   1                  0             1   \n",
        "\n",
        "   Estado_Muy bueno  Estado_Reacondicionado  \n",
        "7                 0                       0  \n",
        "2                 0                       1  \n",
-       "4                 0                       0  \n",
-       "3                 0                       1  \n",
-       "6                 1                       0  "
+       "1                 0                       0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train"
+    "df_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77f8203e-0c1d-475f-badb-1b378706546e",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1:\n",
+    "\n",
+    "Separar la tabla en dos pero con el 80% de los datos en la tabla de Train y el 20% en la tabla de Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e0ebba4f-6771-4739-a8a6-898e4f6dffa9",
+   "execution_count": 8,
+   "id": "65f5453e-efd7-4c27-85d3-8334df47586e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f0401f30-0888-4588-8ca2-21cffb4cca2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
+    "\n",
+    "df_train, df_test = train_test_split(df, test_size=0.20, random_state=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e2159189-72b3-47ea-9291-a481811631bf",
    "metadata": {},
    "outputs": [
     {
@@ -462,8 +620,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>499.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>294.84</td>\n",
+       "      <td>376.84</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -475,36 +648,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>234.92</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>461.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -512,61 +655,25 @@
       ],
       "text/plain": [
        "   Precio  Memoria_64  Memoria_256  Memoria_512  Color_Gris  Color_Oro  \\\n",
-       "1  294.84           0            1            0           1          0   \n",
-       "5  234.92           0            1            0           0          0   \n",
-       "0  461.99           0            1            0           1          0   \n",
+       "4  499.00           0            1            0           1          0   \n",
+       "1  376.84           0            1            0           1          0   \n",
        "\n",
        "   Color_Verde  Desbloqueado_False  Desbloqueado_True  Estado_Bueno  \\\n",
+       "4            0                   1                  0             1   \n",
        "1            0                   1                  0             1   \n",
-       "5            1                   0                  1             1   \n",
-       "0            0                   1                  0             0   \n",
        "\n",
        "   Estado_Muy bueno  Estado_Reacondicionado  \n",
-       "1                 0                       0  \n",
-       "5                 0                       0  \n",
-       "0                 0                       1  "
+       "4                 0                       0  \n",
+       "1                 0                       0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "77f8203e-0c1d-475f-badb-1b378706546e",
-   "metadata": {},
-   "source": [
-    "### Ejercicio 1:\n",
-    "\n",
-    "Separar la tabla en dos pero con el 80% de los datos en la tabla de Train y el 20% en la tabla de Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65f5453e-efd7-4c27-85d3-8334df47586e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Escribir aqui la solucion\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f0401f30-0888-4588-8ca2-21cffb4cca2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
-    "\n",
-    "df_train, df_test = train_test_split(df, test_size=0.20, random_state=42)"
    ]
   },
   {
@@ -581,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3a056ec7-3800-4252-9597-f00a2b9b3ca1",
    "metadata": {},
    "outputs": [],
@@ -592,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "47d2b5c4-e54b-4a9c-a76b-986ed733cd00",
    "metadata": {},
    "outputs": [],
